name:           raytracer
version:        0.1.0.0
synopsis:       A raytracer written in Haskell
description:    See README.md
homepage:       https://github.com/stewy33/haskell-raytracer#readme
bug-reports:    https://github.com/stewy33/haskell-raytracer/issues
author:         Stewart Slocum
maintainer:     slocumstewy@gmail.com
copyright:      Stewart Slocum
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/stewy33/haskell-raytracer

library
  hs-source-dirs:
      src
  build-depends:
      base >= 4.7 && < 5
    , JuicyPixels
  exposed-modules:
      Raytracer
  default-language: Haskell2010

executable example
  main-is: Main.hs
  hs-source-dirs:
      example
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >= 4.7 && < 5
    , raytracer
    , JuicyPixels
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >= 4.7 && < 5
    , haskell-raytracer
  default-language: Haskell2010
